Add table to recommendation page

--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,10 @@
     "react": "^16.13.0",
     "react-crud-table": "0.0.8",
     "react-dom": "^16.13.0",
+    "react-json-table": "^0.1.1",
     "react-scripts": "3.4.0",
-    "react-select": "^2.4.4"
+    "react-select": "^2.4.4",
+    "ts-react-json-table": "^0.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
