--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
+    "react-bootstrap-button-loader": "^2.0.0",
     "react-crud-table": "0.0.8",
     "react-dom": "^16.13.0",
     "react-json-table": "^0.1.1",
