--- a/app/package.json
+++ b/app/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://cs411-server.herokuapp.com",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
